<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GSSDKDemo</string>
    <string name="fetch_fullscreen">Fetch Fullscreen</string>
    <string name="display_fullscreen">Display Fullscreen</string>
    <string name="fetch_banner">Fetch Small Banner</string>
    <string name="banner_instructions">Banner should appear below.</string>
    <string name="robots">Robots can be dangerous, but they do love our rich media ads.</string>

</resources>