<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:gs="http://schemas.android.com/apk/lib/com.greystripe.sdk"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/robots" />

    <Button
        android:id="@+id/fetchFullscreenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:onClick="fetchFullscreenClicked"
        android:text="@string/fetch_fullscreen" />

    <Button
        android:id="@+id/displayFullscreenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp"
        android:onClick="displayFullscreenClicked"
        android:text="@string/display_fullscreen" />

    <Button
        android:id="@+id/refreshBannerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30sp"
        android:onClick="refreshBannerClicked"
        android:text="@string/fetch_banner" />

    <TextView
        android:id="@+id/textFieldBanner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20sp"
        android:gravity="center"
        android:text="@string/banner_instructions" />

    <com.greystripe.sdk.GSMobileBannerAdView
        android:id="@+id/gsBanner"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        gs:autoload="false" />

</LinearLayout>